test/spec/loop.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/loop.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/loop.wast:211:11: unable to join type void (type of last operation) with type i32 (function signature result type).
  (module (func $type-empty-i32 (result i32) (loop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/loop.wast:215:11: unable to join type void (type of last operation) with type i64 (function signature result type).
  (module (func $type-empty-i64 (result i64) (loop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/loop.wast:219:11: unable to join type void (type of last operation) with type f32 (function signature result type).
  (module (func $type-empty-f32 (result f32) (loop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/loop.wast:223:11: unable to join type void (type of last operation) with type f64 (function signature result type).
  (module (func $type-empty-f64 (result f64) (loop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/loop.wast:229:6: maximum arity for loop is 1, got 2
    (loop (i64.const 1) (i64.const 2)) i64.add
     ^^^^
assert_invalid error:
  third_party/testsuite/loop.wast:229:40: type stack size too small at i64.add. got 1, expected at least 2
    (loop (i64.const 1) (i64.const 2)) i64.add
                                       ^^^^^^^
assert_invalid error:
  third_party/testsuite/loop.wast:235:6: maximum arity for loop is 1, got 2
    (loop (nop) (i32.const 7) (nop) (i32.const 8)) i32.add
     ^^^^
assert_invalid error:
  third_party/testsuite/loop.wast:235:52: type stack size too small at i32.add. got 1, expected at least 2
    (loop (nop) (i32.const 7) (nop) (i32.const 8)) i32.add
                                                   ^^^^^^^
assert_invalid error:
  third_party/testsuite/loop.wast:241:11: unable to join type void (type of last operation) with type i32 (function signature result type).
  (module (func $type-value-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/loop.wast:247:11: unable to join type f32 (type of last operation) with type i32 (function signature result type).
  (module (func $type-value-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/loop.wast:270:12: type mismatch at br value. got i32, expected void
    (loop (br 0 (nop)))
           ^^
assert_invalid error:
  third_party/testsuite/loop.wast:270:12: type stack size too small at br. got 0, expected at least 1
    (loop (br 0 (nop)))
           ^^
assert_invalid error:
  third_party/testsuite/loop.wast:276:12: type mismatch at br value. got i32, expected void
    (loop (br 0 (i32.const 0)))
           ^^
assert_invalid error:
  third_party/testsuite/loop.wast:283:12: type mismatch at br value. got i32, expected void
    (loop (br 0 (nop)))
           ^^
assert_invalid error:
  third_party/testsuite/loop.wast:283:12: type stack size too small at br. got 0, expected at least 1
    (loop (br 0 (nop)))
           ^^
assert_invalid error:
  third_party/testsuite/loop.wast:289:12: type mismatch at br value. got i32, expected void
    (loop (br 0 (i32.const 0)))
           ^^
assert_invalid error:
  third_party/testsuite/loop.wast:296:25: type mismatch at br value. got i32, expected void
    (block (loop (loop (br 0 (nop))) (br 1)))
                        ^^
assert_invalid error:
  third_party/testsuite/loop.wast:296:25: type stack size too small at br. got 0, expected at least 1
    (block (loop (loop (br 0 (nop))) (br 1)))
                        ^^
assert_invalid error:
  third_party/testsuite/loop.wast:302:25: type mismatch at br value. got i32, expected void
    (block (loop (loop (br 0 (i32.const 1))) (br 1)))
                        ^^
42/42 tests passed.
;;; STDOUT ;;)
